--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
 
 
   <div class="container-fluid">
+    <!-- <div class="photo-info-container">
+      <div class="photo-info-wrapper">
+        <h3>This is the description</h3>
+        <h4>1945</h4>
+      </div>
+
+    </div> -->
     <div class="img-container">
 
 
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" >
+      <div id="carousel-example-generic" class="carousel slide " data-ride="carousel">
         <div class="carousel-inner" role="listbox">
+
 
 
         </div>
@@ -61,8 +69,22 @@
   </div>
 
 
+
+  <div id="17" class="carousel-item">
+    <div class="item-info">
+      <h3 class="item-description"></h3>
+      <h4 class="item-year"></h4>
+    </div>
+    <img src="img/image018.jpg" class="d-block mx-auto">
+  </div>
+
+
   <script src="./js/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"
+    integrity="sha512-2rNj2KJ+D8s1ceNasTIex6z4HWyOnEYLVC3FigGOmyQCZc2eBXKgOxQmo3oKLHyfcj53uz4QMsRCWNbLd32Q1g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/data.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
