--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="css/music-player.css" />
   <link rel="stylesheet" href="css/qr-code.css" />
 
+  <!-- <script src="./files/qrcode.min.js"></script> -->
 
 
   <title>Folklife Audio Player</title>
@@ -29,7 +30,7 @@
   <div id="main-container" class="container-fluid d-flex flex-column align-items-center">
     <!-- modal -->
     <!-- Button trigger modal -->
-    <div class="header-container d-none d-sm-flex justify-content-between ">
+    <div class="header-container  ">
       <div id="full-screen" class=" full-screen d-flex align-items-center ">
         <i class="fas fa-expand"></i>
       </div>
@@ -44,10 +45,11 @@
       <div class="modal-dialog modal-dialog-centered modal-sizing">
         <div class="modal-content text-center">
           <!-- <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div> -->
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div> -->
           <div class="modal-body">
             <h2>Settings:</h2>
+
             <h3>Slideshow speed:</h3>
             <input type="radio" class="btn-check slider-speed-input" name="slider-speed" id="speed1" autocomplete="off">
             <label id="speed-btn-vs" class="btn btn-light btn-outline-dark slider-speed-btns modal-btns"
@@ -62,12 +64,23 @@
             <input type="radio" class="btn-check slider-speed-input" name="slider-speed" id="speed4" autocomplete="off">
             <label id="speed-btn-f" class="btn btn-light btn-outline-dark slider-speed-btns modal-btns"
               for="speed4">Fast</label>
+
             <h3 class="mt-3">Slideshow style:</h3>
             <input type="radio" class="btn-check slider-style-input" name="slider-style" id="style1" autocomplete="off"
               checked>
             <label class="btn btn-light btn-outline-dark slider-style-btns modal-btns" for="style1">Slider</label>
             <input type="radio" class="btn-check slider-style-input" name="slider-style" id="style2" autocomplete="off">
             <label class="btn btn-light btn-outline-dark slider-style-btns modal-btns" for="style2">Fade</label>
+            <div class="qr-settings d-none d-lg-block mt-3">
+              <h3 class=" ">Qr-Code style:</h3>
+              <input type="radio" class="btn-check slider-qr-input" name="slider-qr" id="qr1" autocomplete="off"
+                checked>
+              <label class="btn btn-light btn-outline-dark slider-qr-btns modal-btns" for="qr1">Default</label>
+              <input type="radio" class="btn-check slider-qr-input" name="slider-qr" id="qr2" autocomplete="off">
+              <label class="btn btn-light btn-outline-dark slider-qr-btns modal-btns" for="qr2">Add Image</label>
+            </div>
+
+
           </div>
           <div class="modal-footer d-flex justify-content-center mb-0">
             <button id="modal-close" type="button" class="btn btn-light btn-outline-dark"
@@ -81,23 +94,36 @@
       <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
         <div class="carousel-inner">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <button class="carousel-control-prev d-flex">
+          <div class="icon-container">
+            <span class="carousel-control-prev-icon" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev" aria-hidden="true"></span>
+          </div>
+
           <span class="visually-hidden"></span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden"></span>
+        <button class="carousel-control-next d-flex">
+          <div class="icon-container">
+            <span class="carousel-control-next-icon" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="next" aria-hidden="true"></span>
+            <span class="visually-hidden"></span>
+          </div>
+
         </button>
       </div>
     </div>
+    <div class="toggle-music-player-container d-none d-md-block">
+      <i class="fa-solid fa-music"></i>
+    </div>
+
+
     <!-- music player -->
     <div
       class="footer-content d-flex flex-column flex-md-row justify-content-between justify-content-lg-between align-items-center">
-      <div class="music-player" id="music-container">
-        <div class="music-info text-center">
+      <!-- toggle music player btn -->
+
+      <div class="music-player d-md-none" id="music-container">
+        <div class="music-info text-center d-none d-md-block">
           <h4 id="title"></h4>
           <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
@@ -116,37 +142,73 @@
           </button>
         </div>
       </div>
-      <div class="qr-container  d-none d-md-flex justify-content-center align-items-center  flex-lg-column">
+      <div class="qr-container  d-none d-md-flex justify-content-center align-items-center  ">
+
+
+
+
+
+
         <p class="mb-0 d-none d-md-block text-center">Scan to learn more at Florida Memory</p>
-        <div class="group d-none">
+
+
+
+
+
+
+        <div class="mb-4 mt-3 " id="qr-code"></div>
+
+        <!-- <div  class="group ">
           <div id="qr"></div>
           <div id="image"><img src=""></div>
-        </div>
-        <div class="group">
+        </div> -->
+
+        <div id="img-qr" class="group d-none">
           <div id="combine"></div>
         </div>
+
       </div>
       <div class="mobile-info-container  d-md-none d-flex justify-content-center align-items-center">
+
+        <!-- <button class="carousel-control-prev d-flex d-md-none">
+          <div class="icon-container">
+            <span class="carousel-control-prev-icon" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev" aria-hidden="true"></span>
+          </div>
+
+          <span class="visually-hidden"></span>
+        </button> -->
+
         <a id="mobile-info-link" href="">Visit item page to learn more</a>
+
+        <!-- <button class="carousel-control-next d-flex d-md-none">
+          <div class="icon-container">
+            <span class="carousel-control-next-icon" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="next" aria-hidden="true"></span>
+            <span class="visually-hidden"></span>
+          </div>
+
+        </button>
+      </div> -->
       </div>
     </div>
-  </div>
 
-  <!-- <script src="./files/qrcode.min.js"></script> -->
-  <script src="./files/qrcode.js"></script>
-  <script src="./files/qart.js"></script>
-  <script src="./files/jquery-3.7.0.js"></script>
-  <script src="./files/bootstrap.bundle.min.js"></script>
-  <script src="./files/jquery.awesome-cursor.min.js"></script>
-  <script src="./js/script.js"></script>
+    <script src="./files/qrcode.min.js"></script>
+    <script src="./files/qrcode.js"></script>
+    <script src="./files/qart.js"></script>
+    <script src="./files/jquery-3.7.0.js"></script>
+    <script src="./files/bootstrap.bundle.min.js"></script>
+    <script src="./files/jquery.awesome-cursor.min.js"></script>
+    <script src="./js/script.js"></script>
 
-  <script src="./js/data.js"></script>
-  <script src="./js/modal.js"></script>
-  <script src="./js/music-player.js"></script>
-  <script src="./js/image-slider.js"></script>
-  <script src="./js/qr-functions.js"></script>
-  <!-- <script>$('body').fadeIn(2000); </script> -->
-  <script src="./js/fullscreen.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/music-player.js"></script>
+    <script src="./js/image-slider.js"></script>
+    <script src="./js/qr-functions.js"></script>
+    <script src="./js/normal-qr.js"></script>
+    <!-- <script>$('body').fadeIn(2000); </script> -->
+    <script src="./js/fullscreen.js"></script>
 
 
 </body>
